basic jwt functionality

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ POSTRGRES_USER='bcorey'
 POSTGRES_PORT=5432
 POSTGRES_DB='contact_manager'
 POSTGRES_HOST='/var/run/postgresql'
+SECRET='superdupersafe'
