--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "4.13.3",
     "fs": "0.0.2",
     "json-beautify": "^1.0.1",
+    "jsonwebtoken": "^9.0.2",
     "path": "0.12.7",
     "pg": "^8.11.3"
   },
