--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs": "0.0.2",
     "json-beautify": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1",
     "path": "0.12.7",
     "pg": "^8.11.3"
   },
