--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ POSTGRES_DB='contact_manager'
 POSTGRES_HOST='/var/run/postgresql'
 SECRET='superdupersafe'
 MONGODB_URI='mongodb+srv://fullstack:7y6emLh9L8fyc6ZI@cluster0.ldqtmnb.mongodb.net/contactsApp?retryWrites=true&w=majority'
+PORT=3000
